--- a/src/components/onboarding/onboarding.css
+++ b/src/components/onboarding/onboarding.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: #FFFFFF;
   position: relative;
-  height: 100dvh;
+  height: 100vh;
 
   
 }
@@ -32,7 +32,7 @@
 
   display: flex;
   flex-direction: column;
-
+height: 100vh;
   padding: 20px 0 0;
 }
 
