--- a/src/components/onboarding/onboarding.css
+++ b/src/components/onboarding/onboarding.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: #FFFFFF;
   position: relative;
-
+height: 100dvh;
   
 }
 
@@ -58,12 +58,14 @@ flex: 1;
 }
 
 .onboarding__image {
-  max-width: 100%;
-  height: 100%;
-  object-fit: contain;
-  border-radius: 32px 32px 0 0;
-  width: 100%;
-  margin:  32px 0 0;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 32px 32px 0 0;
+    width: 100%;
+    margin: 32px 0 0;
+
+
 }
 
 .onboarding__footer {
