--- a/src/components/onboarding/onboarding.css
+++ b/src/components/onboarding/onboarding.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: #FFFFFF;
   position: relative;
-height: 100dvh;
+height: 100vh;
   
 }
 
@@ -31,8 +31,7 @@ height: 100dvh;
 
   display: flex;
   flex-direction: column;
-flex: 1;
-
+  height: 100%;
   padding: 20px 0 0;
 }
 
@@ -59,7 +58,7 @@ flex: 1;
 
 .onboarding__image {
     max-width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     border-radius: 32px 32px 0 0;
     width: 100%;
