--- a/src/components/onboarding/onboarding.css
+++ b/src/components/onboarding/onboarding.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: #FFFFFF;
   position: relative;
-height: 100vh;
+height: 100dvh;
   
 }
 
@@ -62,7 +62,8 @@ height: 100vh;
     object-fit: cover;
     border-radius: 32px 32px 0 0;
     width: 100%;
-    margin: 32px 0 0;
+    margin-top: 15px;
+
 
 
 }
