--- a/src/components/registration/Registration.css
+++ b/src/components/registration/Registration.css
@@ -26,11 +26,17 @@ display: flex;
 flex-direction: column;
 }
 
+.registration__form{
+    height: 100%;
+}
+
+
+
 .registration{
     height: 100dvh;
     display: flex;
-    margin-bottom: 15px;
-    flex-direction: column;
+    padding-bottom: 15px;
+        flex-direction: column;
 }
 
 .registration__input-group:last-child{
@@ -42,8 +48,8 @@ flex-direction: column;
 font-size: 32px;
 text-align: center;
 color: #222;
-width: 90%;
-margin: 0 auto;
+
+margin: 24px auto;
 }
 
 .registration__content{
@@ -96,11 +102,14 @@ background: #fff;
 
 }
 
+.registration__input-group:nth-child(2){
+ flex: 1;
+}
+
 .registration__form{
     display: flex;
     gap: 8px;   
-    align-items: center;
-    justify-content: center;
+align-items: center;
     
     flex-direction: column;
 }
