--- a/src/components/registration/Registration.css
+++ b/src/components/registration/Registration.css
@@ -119,6 +119,52 @@ align-items: center;
   outline: none;
 }
 
+.registration__success{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.registration__success-item-text h3{
+    font-weight: 600;
+font-size: 16px;
+color: #000;
+}
+
+.registration__success-item-text p{
+    font-weight: 400;
+font-size: 12px;
+color: #000;
+}
+
+.sa{
+    width: 100%;
+    max-width: 100%;
+}
+
+.hs{
+    height: 100%;
+}
+
+.bottom{
+    margin-top: auto;
+}
+
+.dost_image.greeen
+{
+    filter:   sepia(0%) saturate(585%) hue-rotate(310deg) brightness(93%) contrast(100%);
+}
+.registration__success-item{
+    display: flex;
+align-items: center;
+gap: 16px;
+border-radius: 8px;
+padding: 10px 16px;
+background: rgba(242, 242, 247, 0.5);
+justify-content: flex-start;
+flex-direction: row;
+}
+
 .registration__input-group input.error {
   border-color: #FF3B30;
 }
